--- a/index.css
+++ b/index.css
@@ -12,11 +12,21 @@
   flex-wrap: wrap;
 }
 
+p {
+    font-size: 20;
+}
+
+.city {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 .item {
   box-sizing: border-box;
   flex-grow: 0;
   flex-basis: 100%;
-  border: 1px solid orangered;
+  border: 1px solid rgb(85, 0, 155);
+  border-radius: 15px;
+  margin-block-end: 5px;
   align-content: center;
 }
 
@@ -35,6 +45,23 @@
 
 .item.cell {
   flex-basis: 25%;
+}
+
+.sort {
+    text-align: left;
+}
+
+.filter {
+    margin-right: 0;
+    text-align: left;
+    display: inline;
+}
+
+#sort-filter {
+    width: 100%;
+    border-width:5px;
+    border: 1px solid;
+    border-radius: 1%;
 }
 
 /* adjustments for medium screens, like some tablets or landscape on a mobile */
@@ -68,12 +95,13 @@
 /* !!!!!!!!!!!!!!!!!!!! */
 
 body {
-  background-color: #f5f5f5;
+  background-color: #c5e5e9;
   color: #2d2c2c;
   font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
 }
 
-.data-record {
-  /* visual helper */
-  border: 3px solid blueviolet;
+.emoji {
+    font-size: 40;
+    color: rgb(168, 0, 168);
 }
